gitops/prakash-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prakash-site
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: prakash.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prakash-site-service
            port:
              number: 80
